git make publish - tony - 9/2022

--- a/step-stubs/steps/normToGrid/0_norm_prototype.ipynb
+++ b/step-stubs/steps/normToGrid/0_norm_prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "36706479",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d666bb84",
    "metadata": {},
    "outputs": [],
@@ -33,6 +33,7 @@
     "    s3_img_root = 's3://ws-in/ssebop/'\n",
     "    dt_raster = os.path.join(s3_img_root, 'dT/dT_102.tif')\n",
     "    tmax_raster = os.path.join(s3_img_root, 'air_temp/tmax_102.tif')\n",
+    "    etr_raster = os.path.join(s3_img_root, 'etr/Hobbins/etr_102.tif')\n",
     "    global_water_raster = os.path.join(s3_img_root, 'masks/global_water_mask_inland.tif')\n",
     "    \n",
     "    # print('WHAT about ndwi_qa do we need that?')\n",
@@ -50,6 +51,8 @@
     "    \n",
     "    my_inputs['dt_raster'] = dt_raster\n",
     "    my_inputs['tmax_raster'] = tmax_raster\n",
+    "    my_inputs['etr_raster'] = etr_raster\n",
+    "\n",
     "    my_inputs['global_water_raster'] = global_water_raster\n",
     "    \n",
     "    return(my_inputs)\n",
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9a698657",
    "metadata": {},
    "outputs": [],
@@ -86,6 +89,7 @@
        " 'ndwi_qa': '/wsefs/pipeline/data_test_normToGrid/GN_eVSH_NDWI.2022.284-293.1KM.WI_QUAL.006.2022310173428.tif',\n",
        " 'dt_raster': 's3://ws-in/ssebop/dT/dT_102.tif',\n",
        " 'tmax_raster': 's3://ws-in/ssebop/air_temp/tmax_102.tif',\n",
+       " 'etr_raster': 's3://ws-in/ssebop/etr/Hobbins/etr_102.tif',\n",
        " 'global_water_raster': 's3://ws-in/ssebop/masks/global_water_mask_inland.tif'}"
       ]
      },
@@ -132,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c9a77d27",
    "metadata": {},
    "outputs": [],
@@ -142,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "5c4f37cf",
    "metadata": {},
    "outputs": [
@@ -152,7 +156,7 @@
        "('uint16',)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "7d7b33fe",
    "metadata": {},
    "outputs": [
@@ -173,7 +177,7 @@
        "(None,)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "b538195b",
    "metadata": {},
    "outputs": [],
@@ -204,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "3c0ef987",
    "metadata": {},
    "outputs": [],
@@ -221,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "9af2a247",
    "metadata": {},
    "outputs": [
@@ -245,6 +249,8 @@
       "       0.0, -0.0096519999, 83.69218315760003)}\n",
       "tmax_raster {'crs': 'EPSG:4326', 'dtypes': ('float32',), 'height': 18027, 'width': 37298, 'bounds': BoundingBox(left=-180.00013888885002, bottom=-90.00013888884999, right=180.00015338134995, top=83.99646330844999), 'compression': None, 'transform': Affine(0.0096519999, 0.0, -180.00013888885002,\n",
       "       0.0, -0.0096519999, 83.99646330844999)}\n",
+      "etr_raster {'crs': 'EPSG:4326', 'dtypes': ('float32',), 'height': 4224, 'width': 8637, 'bounds': BoundingBox(left=-179.99583330000164, bottom=-89.99583333333675, right=179.879166700009, top=86.00416666666845), 'compression': None, 'transform': Affine(0.0416666666666679, 0.0, -179.99583330000164,\n",
+      "       0.0, -0.0416666666666679, 86.00416666666845)}\n",
       "global_water_raster {'crs': 'EPSG:4326', 'dtypes': ('uint16',), 'height': 81301, 'width': 172993, 'bounds': BoundingBox(left=-179.99999999990004, bottom=-85.56249999977513, right=179.9992114686, top=83.62524685472488), 'compression': <Compression.lzw: 'LZW'>, 'transform': Affine(0.0020810045, 0.0, -179.99999999990004,\n",
       "       0.0, -0.0020810045, 83.62524685472488)}\n"
      ]
@@ -272,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "9f58fade",
    "metadata": {},
    "outputs": [],
@@ -282,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "4a2d1469",
    "metadata": {},
    "outputs": [
@@ -304,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "1707ec72",
    "metadata": {},
    "outputs": [],
@@ -314,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "114b30f5",
    "metadata": {},
    "outputs": [
@@ -324,7 +330,7 @@
        "'/wsefs/pipeline/data_test_normToGrid/LS_eVSE_TEMP.2022.284-293.1KM.LST_TEMP.006.2022294042535.tif'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "4c0c516a",
    "metadata": {},
    "outputs": [
@@ -347,12 +353,14 @@
        " 'ndvi_raster': '/wsefs/pipeline/data_test_normToGrid/GN_eVSH_NDVI.2022.284-293.1KM.VI_NDVI.001.2022310010552.tif',\n",
        " 'ndwi_raster': '/wsefs/pipeline/data_test_normToGrid/GN_eVSH_NDWI.2022.284-293.1KM.WI_NDWI.006.2022310173428.tif',\n",
        " 'ndvi_qa': '/wsefs/pipeline/data_test_normToGrid/GN_eVSH_NDVI.2022.284-293.1KM.VI_QUAL.001.2022310010552.tif',\n",
+       " 'ndwi_qa': '/wsefs/pipeline/data_test_normToGrid/GN_eVSH_NDWI.2022.284-293.1KM.WI_QUAL.006.2022310173428.tif',\n",
        " 'dt_raster': 's3://ws-in/ssebop/dT/dT_102.tif',\n",
        " 'tmax_raster': 's3://ws-in/ssebop/air_temp/tmax_102.tif',\n",
+       " 'etr_raster': 's3://ws-in/ssebop/etr/Hobbins/etr_102.tif',\n",
        " 'global_water_raster': 's3://ws-in/ssebop/masks/global_water_mask_inland.tif'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "bd539e4d",
    "metadata": {},
    "outputs": [],
@@ -375,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "139784ce",
    "metadata": {},
    "outputs": [
@@ -402,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "34afe678",
    "metadata": {},
    "outputs": [
@@ -412,7 +420,7 @@
        "46.553108272"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "efe0e7ad",
    "metadata": {},
    "outputs": [],
@@ -442,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "edce1970",
    "metadata": {},
    "outputs": [
@@ -452,7 +460,7 @@
        "\"\\nimport rasterio\\nfrom rasterio.windows import from_bounds\\nfrom rasterio.enums import Resampling\\n\\n(left, bottom, right, top) = [-180.0, -60.002258848398924, 180.00029303878546, 80.0]\\n\\nfilepath = my_inputs['global_water_raster']\\nwith rasterio.open(filepath) as src:\\n    rst = src.read(1, window=from_bounds(left, bottom, right, top, src.transform))\\n\""
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "a94a90f2",
    "metadata": {},
    "outputs": [],
@@ -484,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "129215de",
    "metadata": {},
    "outputs": [],
@@ -494,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "48d8670f",
    "metadata": {},
    "outputs": [],
@@ -504,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "5427c3b4",
    "metadata": {},
    "outputs": [],
@@ -514,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "cb7d7715",
    "metadata": {},
    "outputs": [],
@@ -535,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "ad329d30",
    "metadata": {},
    "outputs": [
@@ -545,7 +553,7 @@
        "37298"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "20b880c5",
    "metadata": {},
    "outputs": [],
@@ -566,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "8d24a65e",
    "metadata": {},
    "outputs": [
@@ -576,7 +584,7 @@
        "37297"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "id": "34339ac0",
    "metadata": {},
    "outputs": [],
@@ -641,17 +649,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "id": "ba5b4579",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['gold_standard', 'lst_raster', 'ndvi_raster', 'ndwi_raster', 'ndvi_qa', 'ndwi_qa', 'dt_raster', 'tmax_raster', 'global_water_raster'])"
+       "dict_keys(['gold_standard', 'lst_raster', 'ndvi_raster', 'ndwi_raster', 'ndvi_qa', 'ndwi_qa', 'dt_raster', 'tmax_raster', 'etr_raster', 'global_water_raster'])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "id": "efd306be",
    "metadata": {},
    "outputs": [],
@@ -679,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "id": "f8876950",
    "metadata": {},
    "outputs": [
@@ -711,6 +719,9 @@
       "tmax_raster\n",
       "s3://ws-in/ssebop/air_temp/tmax_102.tif\n",
       "out_data_type:float32\n",
+      "etr_raster\n",
+      "s3://ws-in/ssebop/etr/Hobbins/etr_102.tif\n",
+      "out_data_type:float32\n",
       "global_water_raster\n",
       "s3://ws-in/ssebop/masks/global_water_mask_inland.tif\n",
       "out_data_type:uint16\n"
@@ -734,90 +745,14 @@
    "execution_count": 38,
    "id": "fbf0e55a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on module rasterio.shutil in rasterio:\n",
-      "\n",
-      "NAME\n",
-      "    rasterio.shutil - Raster file management.\n",
-      "\n",
-      "FUNCTIONS\n",
-      "    copy(...)\n",
-      "        Copy a raster from a path or open dataset handle to a new destination\n",
-      "        with driver specific creation options.\n",
-      "        \n",
-      "        Parameters\n",
-      "        ----------\n",
-      "        src : str or PathLike or dataset object opened in 'r' mode\n",
-      "            Source dataset\n",
-      "        dst : str or PathLike\n",
-      "            Output dataset path\n",
-      "        driver : str, optional\n",
-      "            Output driver name\n",
-      "        strict : bool, optional.  Default: True\n",
-      "            Indicates if the output must be strictly equivalent or if the\n",
-      "            driver may adapt as necessary\n",
-      "        creation_options : dict, optional\n",
-      "            Creation options for output dataset\n",
-      "        \n",
-      "        Returns\n",
-      "        -------\n",
-      "        None\n",
-      "    \n",
-      "    copyfiles(...)\n",
-      "        Copy files associated with a dataset from one location to another.\n",
-      "        \n",
-      "        Parameters\n",
-      "        ----------\n",
-      "        src : str or PathLike\n",
-      "            Source dataset\n",
-      "        dst : str or PathLike\n",
-      "            Target dataset\n",
-      "        \n",
-      "        Returns\n",
-      "        -------\n",
-      "        None\n",
-      "    \n",
-      "    delete(...)\n",
-      "        Delete a GDAL dataset\n",
-      "        \n",
-      "        Parameters\n",
-      "        ----------\n",
-      "        path : path\n",
-      "            Path to dataset to delete\n",
-      "        driver : str or None, optional\n",
-      "            Name of driver to use for deleting.  Defaults to whatever GDAL\n",
-      "            determines is the appropriate driver\n",
-      "    \n",
-      "    exists(...)\n",
-      "        Determine if a dataset exists by attempting to open it.\n",
-      "        \n",
-      "        Parameters\n",
-      "        ----------\n",
-      "        path : str\n",
-      "            Path to dataset\n",
-      "\n",
-      "DATA\n",
-      "    __test__ = {}\n",
-      "    log = <Logger rasterio.shutil (WARNING)>\n",
-      "\n",
-      "FILE\n",
-      "    /wsefs/miniconda3/envs/ssconus1121/lib/python3.10/site-packages/rasterio/shutil.cpython-310-x86_64-linux-gnu.so\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# help(rio_shutil)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "id": "9de363cb",
    "metadata": {},
    "outputs": [],
@@ -827,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "id": "9fa70887",
    "metadata": {},
    "outputs": [],
@@ -839,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 41,
    "id": "df80ab47",
    "metadata": {},
    "outputs": [
@@ -849,15 +784,17 @@
        "['/wsefs/pipeline/ndata/lst_raster.tif',\n",
        " '/wsefs/pipeline/ndata/ndwi_qa.tif',\n",
        " '/wsefs/pipeline/ndata/global_water_raster.tif',\n",
+       " '/wsefs/pipeline/ndata/etr_raster.tif',\n",
        " '/wsefs/pipeline/ndata/ndvi_raster.tif',\n",
        " '/wsefs/pipeline/ndata/dt_raster.tif',\n",
        " '/wsefs/pipeline/ndata/ndvi_qa.tif',\n",
        " '/wsefs/pipeline/ndata/ndwi_raster.tif',\n",
        " '/wsefs/pipeline/ndata/tmax_raster.tif',\n",
-       " '/wsefs/pipeline/ndata/gold_standard.tif']"
+       " '/wsefs/pipeline/ndata/gold_standard.tif',\n",
+       " '/wsefs/pipeline/ndata/etf_test.tif']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 42,
    "id": "be03ee2c",
    "metadata": {},
    "outputs": [
@@ -884,6 +821,9 @@
       "       0.0, -0.009651999920606613, 80.0)}\n",
       "/wsefs/pipeline/ndata/global_water_raster.tif\n",
       "{'crs': 'EPSG:4326', 'dtypes': ('uint16',), 'height': 14505, 'width': 37298, 'bounds': BoundingBox(left=-180.0, bottom=-60.002258848398924, right=180.00029303878546, top=80.0), 'compression': <Compression.lzw: 'LZW'>, 'transform': Affine(0.009651999920606613, 0.0, -180.0,\n",
+      "       0.0, -0.009651999920606613, 80.0)}\n",
+      "/wsefs/pipeline/ndata/etr_raster.tif\n",
+      "{'crs': 'EPSG:4326', 'dtypes': ('float32',), 'height': 14505, 'width': 37298, 'bounds': BoundingBox(left=-180.0, bottom=-60.002258848398924, right=180.00029303878546, top=80.0), 'compression': <Compression.lzw: 'LZW'>, 'transform': Affine(0.009651999920606613, 0.0, -180.0,\n",
       "       0.0, -0.009651999920606613, 80.0)}\n",
       "/wsefs/pipeline/ndata/ndvi_raster.tif\n",
       "{'crs': 'EPSG:4326', 'dtypes': ('float32',), 'height': 14505, 'width': 37298, 'bounds': BoundingBox(left=-180.0, bottom=-60.002258848398924, right=180.00029303878546, top=80.0), 'compression': <Compression.lzw: 'LZW'>, 'transform': Affine(0.009651999920606613, 0.0, -180.0,\n",
@@ -902,7 +842,20 @@
       "       0.0, -0.009651999920606613, 80.0)}\n",
       "/wsefs/pipeline/ndata/gold_standard.tif\n",
       "{'crs': 'EPSG:4326', 'dtypes': ('float32',), 'height': 14505, 'width': 37298, 'bounds': BoundingBox(left=-180.0, bottom=-60.002258848398924, right=180.00029303878546, top=80.0), 'compression': <Compression.lzw: 'LZW'>, 'transform': Affine(0.009651999920606613, 0.0, -180.0,\n",
-      "       0.0, -0.009651999920606613, 80.0)}\n"
+      "       0.0, -0.009651999920606613, 80.0)}\n",
+      "/wsefs/pipeline/ndata/etf_test.tif\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'to_string'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [42], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m my_outs:\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i)\n\u001b[0;32m----> 3\u001b[0m     d \u001b[38;5;241m=\u001b[39m get_src_dict(i)\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(d)\n",
+      "Cell \u001b[0;32mIn [13], line 4\u001b[0m, in \u001b[0;36mget_src_dict\u001b[0;34m(file_url)\u001b[0m\n\u001b[1;32m      2\u001b[0m d\u001b[38;5;241m=\u001b[39m{}\n\u001b[1;32m      3\u001b[0m src \u001b[38;5;241m=\u001b[39m rasterio\u001b[38;5;241m.\u001b[39mopen(file_url)\n\u001b[0;32m----> 4\u001b[0m d[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcrs\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43msrc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcrs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_string\u001b[49m()\n\u001b[1;32m      5\u001b[0m d[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdtypes\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m src\u001b[38;5;241m.\u001b[39mdtypes\n\u001b[1;32m      6\u001b[0m d[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mheight\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m src\u001b[38;5;241m.\u001b[39mheight\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'to_string'"
      ]
     }
    ],
